<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tasksTextT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/update_your_task" />

    <TextView
        android:id="@+id/tasksTextT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksTextT"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/taskName"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextPersonNameE1"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksTextT1"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tasksTextT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextPersonNameE1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/taskDecs"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextTextPersonNameE2"
        android:layout_width="291dp"
        android:layout_height="106dp"
        android:layout_below="@id/tasksTextT2"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/buttonN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextPersonNameE2"
        android:layout_centerInParent="true"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update" />


</RelativeLayout>